# lifecoach

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  biome.json  justfile  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/agent_py/: .env.example  .gitignore  Dockerfile  README.md  _PORTING.md  pyproject.toml
apps/agent_py/scripts/: strip_legacy_recovery_events.py
apps/agent_py/src/lifecoach_agent/: __init__.py  agent.py  auth.py  main.py  sentry_setup.py  server.py
apps/agent_py/src/lifecoach_agent/background/: __init__.py  auth.py  dispatcher.py  ids.py  runner.py  schedule_time.py  tasks_client.py  workflow.py
apps/agent_py/src/lifecoach_agent/chat/: __init__.py  empty_turn_guard.py
apps/agent_py/src/lifecoach_agent/context/: __init__.py  air_quality.py  calendar_density.py  holidays.py  memory.py  places.py  session_summarizer.py  session_summary.py  weather.py
apps/agent_py/src/lifecoach_agent/contracts/: __init__.py  background.py  models.py
apps/agent_py/src/lifecoach_agent/notion_agent/: __init__.py  agent.py  database_bootstrap.py  notion_client.py  run_notion.py
apps/agent_py/src/lifecoach_agent/oauth/: __init__.py  notion_client.py  workspace_client.py
apps/agent_py/src/lifecoach_agent/practices/: __init__.py  day_clock.py  day_planning.py  evening_gratitude.py  journaling.py  types.py
apps/agent_py/src/lifecoach_agent/prompt/: __init__.py  build_instruction.py
apps/agent_py/src/lifecoach_agent/state/: __init__.py  daily_flow.py  policies.py  types.py  usage_state.py  user_state.py
apps/agent_py/src/lifecoach_agent/storage/: __init__.py  background_firestore.py  background_firestore_adapter.py  background_notifications.py  (+12 more)
apps/agent_py/tests/evals/: README.md  conftest.py  eval_agent.py  eval_anon_signup_hard_agent.py  eval_anon_signup_soft_agent.py  eval_anon_throttled_agent.py  eval_anonymous_agent.py  eval_email_verified_agent.py  eval_find_workspace_agent.py  eval_google_linked_agent.py  eval_pro_tier_agent.py  eval_signed_in_pro_hard_agent.py  eval_signed_in_pro_soft_agent.py  eval_triage_inbox_agent.py  eval_workspace_agent.py  test_eval_cases.py
apps/agent_py/tests/integration/: test_chat_endpoint_smoke.py  test_notion_oauth_exchange.py
apps/agent_py/tests/unit/: test_background_contracts.py  test_contracts.py  test_firestore_adapter.py  test_main_background_oidc.py  test_server.py  test_smoke.py
(+446 files in other folders)
