[project]
name = "lifecoach-agent"
version = "0.0.0"
description = "Lifecoach agent — Python ADK rebuild of apps/agent/."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Tim Richardson" }]

# Pinned to the latest stable as of 2026-05-07. The TS port (@google/adk
# 0.6.1) is being phased out in favour of this — see
# `~/.claude/plans/no-server-ip-fallback-encapsulated-sunset.md`.
dependencies = [
  "google-adk==1.32.0",
  "google-api-python-client>=2.150.0",
  "google-cloud-firestore>=2.20.0",
  "google-cloud-storage>=2.18.0",
  "firebase-admin>=6.6.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "sentry-sdk[fastapi]>=2.20.0",
  "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",          # httpx mocking for context fetchers
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lifecoach_agent"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults — F, E, W from pyflakes/pycodestyle, plus pyupgrade,
# bugbear, simplify, isort. Add more when we feel friction.
select = ["F", "E", "W", "UP", "B", "SIM", "I"]
# B008: function-call-in-default-argument — common with FastAPI Depends().
# E501: line-too-long — formatter enforces line length, lint shouldn't double-fail.
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False is fine in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
  "slow: long-running tests excluded from default runs",
  "real_llm: hits real Gemini — requires LIFECOACH_EVAL_REAL_LLM=1",
]

[tool.coverage.run]
branch = true
source = ["src/lifecoach_agent"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_unreachable = true
# Pragmatic: many third-party packages don't ship stubs.
ignore_missing_imports = true
